[gd_scene load_steps=6 format=1]

[ext_resource path="res://src/actors/player/ship/flying_npc.gd" type="Script" id=1]
[ext_resource path="res://src/actors/enemies/flying_npc_animation.tres" type="Animation" id=2]
[ext_resource path="res://src/audio/sfx/sfx.tscn" type="PackedScene" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 3.36158, -22.6873, 12.9881, -18.164, 21.5707, -10.2772, 21.3388, 11.0634, 8.69675, 20.11, -6.84483, 21.7338, -20.0668, 11.7593, -24.822, -5.52197, -16.1234, -19.3238, -3.94528, -23.1512 )

[sub_resource type="Animation" id=2]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:extra_motion")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( -1.86607, -1.86607 ), "update":0, "values":[ Vector2( 0, -200 ), Vector2( 0, 200 ) ] }

[node name="flying_thing" type="Area2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
collision/layers = 4
collision/mask = 3
script/script = ExtResource( 1 )
movement_speed = -80
random_y_range = 10
motion = "linear"
destroy_sound = "none"
group = "none"
reset_bonus = true

[node name="sprite" type="Sprite" parent="."]

visibility/visible = false

[node name="collision" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( -3.94528, -23.1512, -16.1234, -19.3238, -24.822, -5.52197, -20.0668, 11.7593, -6.84483, 21.7338, 8.69675, 20.11, 21.3388, 11.0634, 21.5707, -10.2772, 12.9881, -18.164, 3.36158, -22.6873 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="visibility" type="VisibilityNotifier2D" parent="."]

transform/pos = Vector2( -2.21606, 0 )
rect = Rect2( -30, -30, 300, 60 )

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explode = ExtResource( 2 )
anims/zigzag = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sfx" parent="." instance=ExtResource( 3 )]

[connection signal="area_enter" from="." to="." method="destroy"]

[connection signal="enter_screen" from="visibility" to="." method="_on_visibility_enter_screen"]

[connection signal="exit_screen" from="visibility" to="." method="_on_visibility_exit_screen"]


